# yoyo-plots

./: README.md  examples.ipynb  pyproject.toml
yoyo_plots/: astro.py  common.py  division.py  figural.py  functions.py  geometry.py  hotel.py  multiplication.py  number_line.py  operations.py  permutations.py  quantities.py  speed.py  staircase.py
